--- a/server/public/views/templates/configview.html
+++ b/server/public/views/templates/configview.html
@@ -1,5 +1,7 @@
 <div class="row">
   <h1>Settings</h1>
-
+{{settings}}
+<input ng-model="settings.newColor">
+<button ng-click="settings.addNewColor()">Add new color</button>
   Pro Mode To Do: UI to add colors to the game.
 </div>
